# de-flashcards-cli

./: README.md  pyproject.toml
de_flashcards_cli/: ai_generator.py  cli.py  config.py  firestore_client.py  flashcards.py  sheets_loader.py
